Styling tweaks, fix name on small screens and increase gap

--- a/app/styles.css
+++ b/app/styles.css
@@ -3,13 +3,18 @@
   body {
     font-size: 14px;
   }
+
+  h1 {
+    font-size: 2.3em;
+  }
+
   .stackable-item {
     width: 75%;
   }
   .stackable {
     flex-direction: column;
     align-items: center;
-    gap: 20px;
+    gap: 30px;
   }
 }
 
@@ -19,13 +24,17 @@
     font-size: 14px;
   }
 
+  h1 {
+    font-size: 2.5em;
+  }
+
   .stackable-item {
     width: 70%;
   }
   .stackable {
     flex-direction: column;
     align-items: center;
-    gap: 20px;
+    gap: 30px;
   }
 }
 
@@ -35,13 +44,17 @@
     font-size: 16px;
   }
 
+  h1 {
+    font-size: 2.5em;
+  }
+
   .stackable-item {
     width: 370px;
   }
   .stackable {
     flex-direction: row;
     align-items: stretch;
-    gap: 20px;
+    gap: 30px;
   }
 }
 
@@ -52,7 +65,6 @@ body {
 h1 {
   font-family: Titillium Web;
   font-weight: 300;
-  font-size: 2.5em;
   letter-spacing: .4em;
   margin-block-end: .5em;
   margin-bottom: -10px;
